# photo-story

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Trunk.toml  ]  docker-compose.yml  fly.toml  justfile  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.circleci/: config.yml
.githooks/: pre-commit
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
assets/: justfile
configs/backend/: database.toml  general.toml  logger.toml  server.toml
configs/frontend/: general.toml  logger.toml  server.toml
crates/backend/: Cargo.toml  build.rs
crates/backend/migrations/: 001-init.sql
crates/backend/src/: app.rs  error.rs  lib.rs  logger.rs  settings.rs
crates/backend/src/domain/: mod.rs
crates/backend/src/domain/entities/: mod.rs  photo.rs  photos.rs
crates/backend/src/features/: mod.rs  photos.rs
crates/backend/src/features/photos/: add_photo.rs  mod.rs
crates/backend/src/infrastructure/: mod.rs
crates/backend/src/infrastructure/drivers/: db.rs
crates/backend/src/infrastructure/repository/: mod.rs
crates/backend/src/infrastructure/repository/photos/: create_photo.rs  mod.rs
crates/backend/src/presentation/: app.rs  mod.rs
crates/backend/src/presentation/by_features/: mod.rs
crates/backend/src/presentation/by_features/photos/: add_photo.rs  mod.rs
crates/backend/src/presentation/routes/: mod.rs  photos.rs
crates/backend/src/services/: mod.rs
crates/backend/src/services/routes/: mod.rs  photos.rs
crates/backend/tests/: e2e_tests.rs
crates/backend/tests/e2e/: mod.rs  photos.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/api/: mod.rs
crates/common/src/api/photos/: add_photo.rs  mod.rs
crates/frontend/: Cargo.toml  Dioxus.toml  Trunk.toml  index.html  justfile  trunk_index.html  trunk_index2.html  trunk_index3.html
crates/frontend/.cargo/: config.toml
crates/frontend/src/: lib.rs  logger.rs  settings.rs  ssr.rs  utils.rs
crates/frontend/src/domain/: mod.rs
crates/frontend/src/features/: mod.rs
crates/frontend/src/features/base_component/: mod.rs
crates/frontend/src/infrastructure/: mod.rs
crates/frontend/src/macros/: attrs.rs  mod.rs
crates/frontend/src/presentation/: mod.rs  routes.rs
crates/frontend/src/presentation/by_features/: hello_server.rs  mod.rs
crates/frontend/src/presentation/components/: error_template.rs  mod.rs
crates/frontend/src/presentation/components/custom_children_container/: mod.rs
crates/frontend/src/presentation/components/lightbox/: item_view.rs  lightbox_state.rs  mod.rs  modal_view.rs
crates/frontend/src/presentation/layout/: footer.rs  header.rs  mod.rs
crates/frontend/src/presentation/utils/: mod.rs
crates/frontend/src/utils/: api.rs
crates/frontend/styles/: postcss.config.js  tailwind.config.js
crates/frontend_admin/: Cargo.toml  Trunk.toml  index.html  justfile
crates/frontend_admin/src/: lib.rs
crates/frontend_admin/src-tauri/: Cargo.toml  tauri.conf.json
crates/frontend_admin/src-tauri/src/: main.rs
crates/frontend_admin/src/presentation/: mod.rs  routes.rs
crates/frontend_admin/src/presentation/components/: error_template.rs  mod.rs
crates/frontend_admin/src/presentation/layout/: footer.rs  header.rs  mod.rs
crates/frontend_admin/styles/: postcss.config.js  tailwind.config.js
crates/monitoring/: Cargo.toml
crates/monitoring/src/: lib.rs  logger.rs  prometheus.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/settings/src/validators/: directory_path.rs  mod.rs
crates/web_server/: Cargo.toml
crates/web_server/src/: app.rs  error.rs  lib.rs  logger.rs  server.rs  settings.rs  ssr.rs
docker/: Dockerfile.backend  Dockerfile.frontend  jaeger.txt  justfile
media/: justfile  prometheus_monitoring_example.rs
media/diagrams/: architecture.component_diagram.puml
monitoring/alertmanager/: secret.config.yml.secret
monitoring/grafana/provisioning/dashboards/: providers.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/prometheus/: config.yml  rules.yml
monitoring/promtail/: config.yml
public/assets/images/: test.jpg.br  test.webp.br
