[workspace]
members = [
    # Full stack.
    "crates/backend",
    "crates/frontend",
    "crates/common",

    # Utils.
    "crates/monitoring",
    "crates/settings",
]

default-members = ["crates/backend", "crates/frontend"]

[profile.dev]
codegen-units = 1

[profile.backend-release]
inherits = "release"
lto = true
debug = false
debug-assertions = false
codegen-units = 1
panic = "abort"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
# required for wasm-snip
debug = true
