[workspace]
resolver = "2"
members = [
    # Full stack.
    "crates/backend",
    "crates/frontend",
    "crates/common",
    "crates/web_server",
    # Utils.
    "crates/monitoring",
    "crates/settings",
]

default-members = ["crates/backend", "crates/frontend", "crates/common", "crates/web_server"]

# [profile.release.package.frontend] would be better, but panic and lto are not supported in package profiles yet.
[profile.release]
# less code to include into binary
panic = "abort"
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
# required for wasm-snip
debug = true

[profile.non-wasm-release]
inherits = "release"
lto = true
debug = false
debug-assertions = false
codegen-units = 1
opt-level = 3

[[workspace.metadata.leptos]]
name = "photo-story"
bin-package = "web_server"
lib-package = "frontend"
bin-features = ["ssr"]
lib-features = ["hydrate"]
bin-profile-release = "non-wasm-release"
output-name = "frontend"
site-root = "build"
assets-dir = "assets"
style-file = "./crates/frontend/styles/dist/tailwind.css"
