[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Henrique Melícias"]
description = "Backend for the application"
license = "MIT"

[[bin]]
name = "backend"
path = "src/bin/main.rs"

[dependencies]
common = { path = "../common" }
monitoring = { path = "../monitoring" }
settings = { path = "../settings" }

chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
smartstring = "1.0"
uuid = { version = "1.2", features = ["serde", "v4"] }
tracing = "0.1"
tracing-log = "0.1"
tokio = { version = "1.24", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
figment = { version = "0.10", features = ["toml", "env", "json"] }
axum = "0.6"

clap = { version = "4.0", features = ["derive"] }
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.4", features = ["full", "fs", "compression-br", "cors"] }
validator = { version = "0.16", features = ["derive"] }
futures = { version = "0.3", features = ["std"], default-features = false }
qstring = "0.7"
error-stack = "0.3"
url = { version = "2.4", features = ["serde"] }
