[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Henrique Melícias <runry.melicias@gmail.com>"]
description = "Backend for the application"
license = "MIT"

[[bin]]
name = "backend"
path = "src/bin/main.rs"

[lib]
path = "src/lib.rs"

[features]
default = []
e2e_tests = []

[dependencies]
common = { path = "../common" }
monitoring = { path = "../monitoring" }
settings = { path = "../settings" }

axum = { version = "0.6", features = ["original-uri", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
error-stack = { version = "0.4.1", features = [
    "spantrace",
] }
figment = { version = "0.10", features = ["toml", "env", "json"] }
futures = { version = "0.3", features = ["std"], default-features = false }
mime = "0.3"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }
qstring = "0.7"
rkyv = { version = "0.7", features = ["copy", "copy_unsafe", "validation"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartstring = "1.0"
sqlx = { version = "0.7", features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
thiserror = "1.0"
tokio = { version = "1.24", features = ["full", "tracing"] }
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.4", features = [
    "compression-br",
    "cors",
    "full",
    "fs",
] }
tracing = "0.1"
tracing-log = "0.2"
url = { version = "2.4", features = ["serde"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
assert-json-diff = "2.0"
hyper = "0.14"
