[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["Henrique Melícias <runry.melicias@gmail.com>"]
description = "Common code between the backend and the frontend"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rkyv = { version = "0.7", features = ["copy", "copy_unsafe", "validation"] }
