cargo-features = ["per-package-target"]

[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["Henrique Melícias"]
description = "Frontend using Dioxus."
license = "MIT"
forced-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
tailwind_stylesheet = []
tailwind_inline = []
tailwind_media = []

[dependencies]
common = { path = "../common" }

thiserror = "1.0"
leptos = { version = "0.4", features = ["nightly", "miniserde"] }
leptos_meta = { version = "0.4", features = ["nightly"] }
leptos_router = { version = "0.4", features = ["nightly"] }
tracing = { version = "0.1" }
gloo = "0.8"
wasm-bindgen = "0.2"
web-sys = "0.3"
lol_alloc = "0.4"
http = "0.2"
