[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["Henrique Melícias"]
description = "Frontend using Dioxus."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
tailwind_stylesheet = []
tailwind_inline = []
tailwind_media = []

[dependencies]
common = { path = "../common" }

gloo = "0.9"
http = "0.2"
leptos = { version = "0.4", features = ["nightly", "miniserde"] }
leptos_meta = { version = "0.4", features = ["nightly"] }
leptos_router = { version = "0.4", features = ["nightly"] }
lol_alloc = "0.4"
thiserror = "1.0"
tracing = { version = "0.1" }
wasm-bindgen = "0.2"
web-sys = "0.3"
