[package]
name = "frontend_admin"
version = "0.1.0"
edition = "2021"
authors = ["Henrique Melícias"]
description = "Frontend using Dioxus."
license = "MIT"

[features]
default = []

[dependencies]
common = { path = "../common" }

thiserror = "1.0"
leptos = { version = "0.4", features = ["nightly", "csr"] }
leptos_router = { version = "0.4", features = ["nightly", "csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
tracing = { version = "0.1" }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["all"] }
futures = "0.3"
gloo = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
http = "0.2"
