[package]
name = "frontend_admin"
version = "0.1.0"
edition = "2021"
authors = ["Henrique Melícias <runry.melicias@gmail.com>"]
description = "Frontend using Dioxus."
license = "MIT"

[features]
default = []

[dependencies]
common = { path = "../common" }

thiserror = "1.0"
leptos = { version = "0.5", features = ["nightly", "csr"] }
leptos_router = { version = "0.5", features = ["nightly", "csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tracing = { version = "0.1" }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["all"] }
gloo = "0.10"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
http = "0.2"
