[package]
name = "settings"
version = "0.1.0"
edition = "2021"
authors = ["Henrique Melícias"]
description = "A simple settings library using figment."
license = "MIT"

[dependencies]
derive_builder = "0.12"
figment = { version = "0.10", features = ["toml", "env", "json"] }
inquire = "0.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
