[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web_server"
path = "src/bin/main.rs"

[features]
default = []
ssr = ["dioxus-ssr", "frontend"]

[dependencies]
frontend = { path = "../frontend", optional = true }
common = { path = "../common" }
thiserror = "1.0"
error-stack = { version = "0.3", features = ["spantrace"] }
dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-ssr = { git = "https://github.com/DioxusLabs/dioxus", optional = true }
gloo = "0.8"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
monitoring = { path = "../monitoring" }
settings = { path = "../settings" }
axum = "0.6"
clap = { version = "4.1", features = ["derive"] }
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.4", features = ["fs", "compression-br", "cors"] }
tracing = "0.1"
tracing-log = "0.1"
tokio = { version = "1.26", features = ["full"] }
url = { version = "2.4", features = ["serde"] }