[package]
name = "web_server"
authors = [ "Henrique Melícias <runry.melicias@gmail.com>" ]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web_server"
path = "src/bin/main.rs"

[features]
default = []
ssr = [
    "frontend",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[dependencies]
frontend = { path = "../frontend", optional = true }
common = { path = "../common" }
thiserror = "1.0"
error-stack = { version = "0.4.1", features = ["spantrace"] }
leptos = { version = "0.5", features = ["nightly", "rkyv"] }
leptos_axum = { version = "0.5" }
leptos_meta = { version = "0.5", features = ["nightly"] }
leptos_router = { version = "0.5", features = ["nightly"] }
gloo = "0.10"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
monitoring = { path = "../monitoring" }
settings = { path = "../settings" }
axum = "0.6"
clap = { version = "4.1", features = ["derive"] }
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.4", features = ["fs", "compression-br", "cors"] }
tracing = "0.1"
tracing-log = "0.2"
tokio = { version = "1.26", features = ["full"] }
url = { version = "2.4", features = ["serde"] }
